Working tests, health balancing
Created 6 test scenarios: One for wrestler selections of 1-4 people, one for a wrestler with more than 100 health, and one for a wrestler with less than 100 health.
Changed it so if a fighter's health would go below zero, it displays as zero.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
     <script src="TestingTournament.js"></script>
     <script src="WrestlingTournament.js"></script>
     <body onload="run_tests()">
-        <p>test</p>
+        <h1>Tournament Results are in the console.</p>
     </body>
 </html>
